build/log/idf_py_stdout_output_19252
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\tiago\OneDrive\Documentos\REPOSITORIOS\MCPWM-CLI\build\bootloader\esp-idf\esptool_py && E:\Espressif\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe E:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/8] Building C object esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj
FAILED: esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj 
ccache E:\Espressif\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/build/config -IC:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/newlib/platform_include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include/freertos -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/xtensa/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/esp_additions/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32s3 -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/port/esp32s3/. -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/heap/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/log/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/soc/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3 -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32s3/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/hal/platform_port/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/hal/esp32s3/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/hal/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include/esp32s3 -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/esp32s3 -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_common/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/soc -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/include/private -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/esp32s3/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/deprecated_include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps/sntp -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/lwip/src/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/freertos/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/deprecated -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/analog_comparator/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/dac/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gpio/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gptimer/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2c/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2s/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/ledc/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/mcpwm/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/parlio/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/pcnt/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/rmt/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdio_slave/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sdmmc/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/sigma_delta/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/spi/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/temperature_sensor/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/twai/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/uart/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/usb_serial_jtag/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/driver/touch_sensor/esp32s3/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_pm/include -IE:/Espressif/Espressif/frameworks/esp-idf-v5.2.1/components/esp_ringbuf/include -IC:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/CLI/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI=. -fmacro-prefix-map=E:/Espressif/Espressif/frameworks/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj -MF esp-idf\multscan_shell\CMakeFiles\__idf_multscan_shell.dir\multscan_shell.c.obj.d -o esp-idf/multscan_shell/CMakeFiles/__idf_multscan_shell.dir/multscan_shell.c.obj -c C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/multscan_shell.c
C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/multscan_shell.c: In function 'setCommand':
C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/multscan_shell.c:146:24: error: assignment of read-only location '*(param1 + (sizetype)xParamLen1)'
  146 |     param1[xParamLen1] = 0x00;
      |                        ^
C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/multscan_shell.c:147:24: error: assignment of read-only location '*(param2 + (sizetype)xParamLen2)'
  147 |     param2[xParamLen2] = 0x00;
      |                        ^
C:/Users/tiago/OneDrive/Documentos/REPOSITORIOS/MCPWM-CLI/components/multscan_shell/multscan_shell.c:138:40: warning: unused variable 'xResult' [-Wunused-variable]
  138 |     BaseType_t xParamLen1, xParamLen2, xResult;
      |                                        ^~~~~~~
ninja: build stopped: subcommand failed.
